infra/k8s/deployment.yaml
# Fittrak deployment /w Postgres (Cloud SQL) and static serving

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: fittrak-static
  labels:
    app: fittrak-static
spec:
  template:
    metadata:
      labels:
        app: fittrak-static
    spec:
      containers:
        - name: app
          image: gcr.io/fittrak-201323/fittrak-static:v6
          ports:
            - containerPort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: fittrak-web
  labels:
    app: fittrak-web
spec:
  template:
    metadata:
      labels:
        app: fittrak-web
    spec:
      containers:
        - name: app
          image: gcr.io/fittrak-201323/fittrak-app:v2
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /accounts/login/
              port: 8000
            periodSeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.11
          command: ["/cloud_sql_proxy",
                    "-instances=<SET ME>=tcp:5432",
                    "-credential_file=/secrets/cloudsql/credentials.json"]
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true

      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
