infra/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fittrak-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "fittrak-ip"
spec:
  tls:
    - secretName: fittrak-tls
  rules:
    - host: fittrak.ca
      http:
        paths:
        - path: /*
          backend:
            serviceName: fittrak-web-service
            servicePort: 8000
        - path: /static/*
          backend:
            serviceName: fittrak-static-service
            servicePort: 8080

    - host: www.fittrak.ca
      http:
        paths:
        - path: /*
          backend:
            serviceName: fittrak-web-service
            servicePort: 8000
        - path: /static/*
          backend:
            serviceName: fittrak-static-service
            servicePort: 8080
